# fluidtopics

./: Dockerfile  command  ftmap.py  main.py  pyproject.toml  requirements.txt
